# mingxin-kvcache-bench

./: LICENSE  PYPI_README.md  README.md  docs_EXPORT_README.md  pyproject.toml
analysis_probe/: agg_metrics.sh  bench_mp2.py  check_cpu64_alerts.sh  check_fs_pool.sh  check_fs_pool2.sh  check_fs_url.sh  check_fs_url_parse.sh  probe_fs_connector.sh  probe_lmcache_share.sh  probe_lmcache_share2.sh  verify_coldread.sh
lmcache_patch/: local_disk_backend.ORIGINAL.py  local_disk_backend.PATCHED.py  local_disk_backend.git.patch  local_disk_backend.patch
load_clients/: bench_mp.py  bench_sla.py  benchcap.py  benchcap_full.py  benchcap_mp.py  benchcap_off.py  kvbench1.py  kvstat.py  launch_sla.sh  launch_sla_np.sh  prefixscan.py  serve.sh
mingxin_kvcache_bench/: __init__.py  cli.py
mingxin_kvcache_bench/data/: kvcache_bench_results.json  tp8_three_way_comparison.csv
orchestration/: amd48_clean.sh  amd48_final.sh  amd48_fsrep.sh  amd48_fsrep64.sh  amd48_fsrep64b.sh  amd48_fsshare.sh  amd48_full2.sh  amd48_kv32k.sh  amd48_kv480.sh  amd48_kv480b.sh  amd48_lmc.sh  amd48_parse.sh  amd48_pre.sh  amd48_recon.sh  amd48_restore.sh  amd48_run.sh  amd48_tp4x2.sh  amd48_tp4x2b.sh  amd48_tp4x2c.sh  amd48_tp8.sh  amd48_tp8b.sh  amd48_tp8c.sh
reports/: AISSD5000-KVCache性能测试报告（480B·TP4x2·全指标汇总·正式版）.md  AISSD5000-KVCache性能测试报告（480B·TP4x2双实例·正式版）.md  AISSD5000-KVCache性能测试报告（480B·TP8长上下文·正式版）.md  AISSD5000-KVCache性能测试报告（480B·多实例形态·正式版）.md  AISSD5000-KVCache跨实例热共享验证报告（fs共享池·正式版）.md
results/: kvcache_bench_results.json  tp8_three_way_comparison.csv
(+5 files in other folders)
